Fixing layout issue and duplicate class. Moving utilities.

--- a/app/assets/stylesheets/layout/_common.scss
+++ b/app/assets/stylesheets/layout/_common.scss
@@ -3,7 +3,7 @@
 //
 // Styleguide layout-container
 .l-container {
-  @extend clearfix;
+  @extend .clearfix;
   max-width: $mq-xl;
   margin:0 auto;
 }
@@ -19,8 +19,6 @@
 // Layout 2 columns
 //
 // Styleguide layout-2col
-.l-2col {}
-
 .l-2col-side {
   @include add-all-grid-spans(1, 1, 1/3, 1/3, 1/3);
 }
